// src/main/resources/proto/task.proto
syntax = "proto3";

package tasks;

option java_multiple_files = true;
option java_package = "com.project.concurrency.grpc";
option java_outer_classname = "TaskProto";

import "google/protobuf/empty.proto";

message TaskDto {
  int64 id = 1;
  string title = 2;
  string description = 3;
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
}

message TaskRequest {
  int64 id = 1;
}

message TaskList {
  repeated TaskDto tasks = 1;
}

service WorkerTaskService {
  rpc Create (CreateTaskRequest) returns (TaskDto);
  rpc Update (TaskDto) returns (TaskDto);
  rpc Get (TaskRequest) returns (TaskDto);
  rpc List (google.protobuf.Empty) returns (TaskList);
}

service VirtualTaskService {
  rpc Create (CreateTaskRequest) returns (TaskDto);
  rpc Update (TaskDto) returns (TaskDto);
  rpc Get (TaskRequest) returns (TaskDto);
  rpc List (google.protobuf.Empty) returns (TaskList);
}

service ReactiveTaskService {
  rpc Create (CreateTaskRequest) returns (TaskDto);
  rpc Update (TaskDto) returns (TaskDto);
  rpc Get (TaskRequest) returns (TaskDto);
  rpc List (google.protobuf.Empty) returns (TaskList);
}